# compas

./: .changie.yaml  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  SECURITY.md  opencode.json  opencode.json.example
.aster-orch/: config.yaml
.changes/: header.tpl.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.5.0.md
.changes/unreleased/: Added-20260321-234538.yaml  Added-20260321-235343.yaml  Added-20260322-000956.yaml  Added-20260322-001115.yaml  Added-20260322-003141.yaml  Added-20260322-162903.yaml  Added-20260322-172647.yaml  Added-20260322-172655.yaml  Added-20260325-120000.yaml  Added-20260328-190911.yaml  Added-20260328-200518.yaml  Added-20260328-212200.yaml  Added-20260328-224542.yaml  Added-20260328-231544.yaml  Added-20260329-010518.yaml  Added-20260329-014104.yaml  Added-20260329-014638.yaml  Added-20260329-014708.yaml  Added-20260329-051659.yaml  Added-20260329-054431.yaml  Added-20260329-145508.yaml  Added-20260329-151754.yaml  Added-20260329-151922.yaml  Added-20260329-152256.yaml  Added-20260329-162100.yaml  Added-ADR-019.yaml  Added-CRON-1.yaml  Added-GBE-1.yaml  Added-GBE-2.yaml  Added-GBE-3.yaml  Added-HOOKS-1.yaml  Added-HOOKS-2.yaml  Added-HOOKS-3.yaml  Added-MERGE-1.yaml  Added-MERGE-2.yaml  Added-MERGE-3.yaml  Added-MERGE-4.yaml  Added-MERGE-6.yaml  Added-OBS-01.yaml  Added-OBS-02.yaml  (+84 more)
.codex/: config.toml
.compas/: config.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/guides/: configuration.md  cookbook.md  dashboard.md
docs/project/: AX.md  DECISIONS.md  architecture.md  backlog-consolidation-guide.md  known-issues.md  migration-config-v2.md
docs/project/backlog/: NEXT.md  capacity-visibility.md  cli-ux.md  config-defaults.md  dashboard-actions.md  dashboard-ux.md  delayed-dispatch.md  generic-backend.md  interactive-sessions.md  lifecycle-hooks.md  merge-safety.md  multi-frontend.md  multi-project.md  orch-chain.md  orch-config.md  orch-conv.md  orch-dashboard-ux.md  orch-docs-sprint.md  orch-evolution.md  orch-foundation.md  orch-handoff.md  orch-intent.md  orch-merge-queue.md  orch-observability.md  orch-ops.md  orch-rename-workdir.md  orch-team.md  orch-wait-ax.md  orch-wait-mcp.md  orch-worktree-placement.md  quality-gaps.md  (+7 more)
examples/: config-generic.yaml  theme_agents.rs  theme_detail.rs  theme_ops.rs
examples/hooks/: log-to-file.sh  notify-slack.sh
scripts/hooks/: pre-commit
skills/backlog-setup/: SKILL.md
skills/dev-workflow/: SKILL.md
skills/orch-dispatch/: SKILL.md
skills/stop-and-think/: SKILL.md
src/: error.rs  events.rs  hooks.rs  lib.rs  merge.rs  notifications.rs  observability.rs  redact.rs  testing.rs  wait.rs  wait_merge.rs  worktree.rs
src/audit/: logger.rs  mod.rs
src/backend/: claude.rs  codex.rs  gemini.rs  generic.rs  mod.rs  opencode.rs  process.rs  registry.rs
src/cli/: detection.rs  doctor.rs  init.rs  mod.rs  setup_mcp.rs
src/config/: mod.rs  types.rs  validation.rs  watcher.rs
src/dashboard/: actions.rs  app.rs  mod.rs  theme.rs
src/health/: mod.rs
src/lifecycle/: merge.rs  mod.rs
src/mcp/: commit.rs  dispatch.rs  health.rs  lifecycle.rs  merge.rs  mod.rs  params.rs  query.rs  server.rs  session.rs  wait.rs
src/model/: agent.rs  message.rs  mod.rs  review.rs  session.rs
src/notification/: filter.rs  formatter.rs  mod.rs  notifier.rs  telegram.rs
src/store/: mod.rs
src/worker/: circuit_breaker.rs  context.rs  executor.rs  guard.rs  loop_runner.rs  mod.rs  pipeline.rs  trigger.rs
src/workflow/: alias.rs  mod.rs  review_ledger.rs  session_ledger.rs  validator.rs
tests/: integration_tests.rs  worker_test.rs
(+21 files in other folders)
