[workspace]

[package]
name = "aster-orch"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aster_orch"
path = "src/bin/aster_orch.rs"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# MCP server
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# TUI dashboard
ratatui = "0.30"
crossterm = "0.29"

# Markdown rendering
pulldown-cmark = "0.13"

# Config live-reload
arc-swap = "1"
notify-debouncer-mini = "0.7"

# Hashing
sha2 = "0.10"

# Utils
thiserror = "2"
ulid = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
