[workspace]

[package]
name = "compas"
version = "0.4.0"
edition = "2021"
description = "Multi-agent orchestrator for AI-assisted software development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ottogiron/compas"
keywords = ["ai", "agent", "orchestrator", "mcp", "coding"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "compas"
path = "src/bin/compas.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/compas-v{ version }-{ target-triple }.tar.gz"
bin-dir = "compas"
pkg-fmt = "tgz"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# MCP server
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# TUI dashboard
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# Markdown rendering
pulldown-cmark = "0.13"

# Config live-reload
arc-swap = "1"
notify-debouncer-mini = "0.7"

# Hashing
sha2 = "0.10"

# Cron expression parsing
croner = "3"

# Utils
thiserror = "2"
ulid = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
